java.util.Calendar classes replaced by java.time classes.

--- a/pom.xml
+++ b/pom.xml
@@ -104,5 +104,11 @@
             </plugin>
         </plugins>
     </build>
-
+    <dependencies>
+        <dependency>
+            <groupId>com.nordea.common</groupId>
+            <artifactId>nordeacommon</artifactId>
+            <version>1.11</version>
+        </dependency>
+    </dependencies>
 </project>
