--- a/src/main/resources/config/flagdays.conf
+++ b/src/main/resources/config/flagdays.conf
@@ -1,22 +1,22 @@
 # Flagdays
 # 
 # 
-2   5   J.L. Runebergin päivä
-2   28  Kalevalan päivä
-3   19  Minna Canthin päivä
-4   9   Mikael Agricolan päivä
-4   27  Kansallinen veteraanipäivä
-5   1   Vappu, suomalaisen työn päivä
-5   9   Eurooppa-päivä
-5   12  J.V. Snellmanin päivä
-5   2.  SUNDAY  Äitienpäivä
-5   3.  SUNDAY  Kaatuneitten muistopäivä
-6   4   Puolustusvoimain lippujuhlan päivä
-6       Suomen lipun päivä
-7   6   Eino Leinon päivä
-10  10  Aleksis Kiven päivä
-24  10  YK:n päivä
-11  6   Ruotsalaisuuden päivä
-11  2.  SUNDAY  Isänpäivä
-12  6   Itsenäisyyspäivä
-12  8   Jean Sibeliuksen päivä
+2   5   "J.L. Runebergin päivä"
+2   28  "Kalevalan päivä"
+3   19  "Minna Canthin päivä"
+4   9   "Mikael Agricolan päivä"
+4   27  "Kansallinen veteraanipäivä"
+5   1   "Vappu, suomalaisen työn päivä"
+5   9   "Eurooppa-päivä"
+5   12  "J.V. Snellmanin päivä"
+5   2.  SUNDAY  "Äitienpäivä"
+5   3.  SUNDAY  "Kaatuneitten muistopäivä"
+6   4   "Puolustusvoimain lippujuhlan päivä"
+6   20-26 SATURDAY  "Suomen lipun päivä"
+7   6   "Eino Leinon päivä"
+10  10  "Aleksis Kiven päivä"
+10  24  "YK:n päivä"
+11  6   "Ruotsalaisuuden päivä"
+11  2.  SUNDAY  "Isänpäivä"
+12  6   "Itsenäisyyspäivä"
+12  8   "Jean Sibeliuksen päivä"
