--- a/src/main/resources/config/flagdays.conf
+++ b/src/main/resources/config/flagdays.conf
@@ -1,22 +1,22 @@
 # Flagdays
 # 
 # 
-2   5   "J.L. Runebergin p√§iv√§"
-2   28  "Kalevalan p√§iv√§"
-3   19  "Minna Canthin p√§iv√§"
-4   9   "Mikael Agricolan p√§iv√§"
-4   27  "Kansallinen veteraanip√§iv√§"
-5   1   "Vappu, suomalaisen ty√∂n p√§iv√§"
-5   9   "Eurooppa-p√§iv√§"
-5   12  "J.V. Snellmanin p√§iv√§"
-5   2.  SUNDAY  "√Ñitienp√§iv√§"
-5   3.  SUNDAY  "Kaatuneitten muistop√§iv√§"
-6   4   "Puolustusvoimain lippujuhlan p√§iv√§"
-6   20-26 SATURDAY  "Suomen lipun p√§iv√§"
-7   6   "Eino Leinon p√§iv√§"
-10  10  "Aleksis Kiven p√§iv√§"
-10  24  "YK:n p√§iv√§"
-11  6   "Ruotsalaisuuden p√§iv√§"
-11  2.  SUNDAY  "Is√§np√§iv√§"
-12  6   "Itsen√§isyysp√§iv√§"
-12  8   "Jean Sibeliuksen p√§iv√§"
+2   5   "J.L. Runebergin p‰iv‰"
+2   28  "Kalevalan p‰iv‰"
+3   19  "Minna Canthin p‰iv‰"
+4   9   "Mikael Agricolan p‰iv‰"
+4   27  "Kansallinen veteraanip‰iv‰"
+5   1   "Vappu, suomalaisen tyˆn p‰iv‰"
+5   9   "Eurooppa-p‰iv‰"
+5   12  "J.V. Snellmanin p‰iv‰"
+5   2.  SUNDAY  "ƒitienp‰iv‰"
+5   3.  SUNDAY  "Kaatuneitten muistop‰iv‰"
+6   4   "Puolustusvoimain lippujuhlan p‰iv‰"
+6   20-26 SATURDAY  "Suomen lipun p‰iv‰"
+7   6   "Eino Leinon p‰iv‰"
+10  10  "Aleksis Kiven p‰iv‰"
+10  24  "YK:n p‰iv‰"
+11  6   "Ruotsalaisuuden p‰iv‰"
+11  2.  SUNDAY  "Is‰np‰iv‰"
+12  6   "Itsen‰isyysp‰iv‰"
+12  8   "Jean Sibeliuksen p‰iv‰"
