--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>calendarfx</groupId>
+    <groupId>com.vajasoft.calendarfx</groupId>
     <artifactId>CalendarFX</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
@@ -11,12 +11,12 @@
 
     <properties>
         <project.build.sourceEncoding>windows-1252</project.build.sourceEncoding>
-        <mainClass>calendarfx.CalendarApp</mainClass>
+        <mainClass>com.vajasoft.calendarfx.CalendarApp</mainClass>
     </properties>
 
     <organization>
         <!-- Used as the 'Vendor' for JNLP generation -->
-        <name>Your Organisation</name>
+        <name>Vajasoft</name>
     </organization>
 
     <build>
@@ -104,11 +104,4 @@
             </plugin>
         </plugins>
     </build>
-    <dependencies>
-        <dependency>
-            <groupId>com.nordea.common</groupId>
-            <artifactId>nordeacommon</artifactId>
-            <version>1.11</version>
-        </dependency>
-    </dependencies>
 </project>
