Added "Pyhäinpäivä" as feast day. Fixed clearing "sunday-label" style. Modified slightly the flag day configuration (day range).

--- a/src/main/resources/config/flagdays.conf
+++ b/src/main/resources/config/flagdays.conf
@@ -12,7 +12,7 @@
 5   2.  SUNDAY  "Äitienpäivä"
 5   3.  SUNDAY  "Kaatuneitten muistopäivä"
 6   4   "Puolustusvoimain lippujuhlan päivä"
-6   20-26 SATURDAY  "Suomen lipun päivä"
+6   20-> SATURDAY  "Suomen lipun päivä"
 7   6   "Eino Leinon päivä"
 10  10  "Aleksis Kiven päivä"
 10  24  "YK:n päivä"
